Modify format of h1 and p label

--- a/git.css
+++ b/git.css
@@ -2,3 +2,14 @@ body
 {
     background-color:lightblue;
 }
+h1
+{
+    color:cornsilk;
+    text-align: center;
+}
+p
+{
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 20px;
+    text-align: center;
+}
